# simple-django-project

./: .gitignore  manage.py  pyproject.toml
api/: urls.py  views.py
docker/: Dockerfile  docker-compose.yml  server-entrypoint.sh
simpleDjangoProject/: asgi.py  settings.py  urls.py  wsgi.py
utils/: aws.py
