[tool.poetry]
name = "simpledjangoproject"
version = "0.1.0"
description = ""
authors = ["Igor Lagutin <igor.lagutin@pythagoras.technology>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
